Use Streams instead of Blobs
- StreamSaver.JS is now used so that it's possible to redownload large files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body style="padding: 20px;" data-bs-theme="dark">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.6/StreamSaver.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.6/examples/zip-stream.js"></script>
   <script>if (localStorage.getItem("RedownloadFiles-Theme") === "a") document.body.setAttribute("data-bs-theme", "light")</script>
 </body>
 
