--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon">
+  <meta name="apple-mobile-web-app-status-bar" content="#212529" />
+  <meta name="theme-color" content="#0d6efd" />
+
   <title>Redownload Files</title>
 </head>
 
 <body style="padding: 20px;" data-bs-theme="dark">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.6/StreamSaver.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.6/examples/zip-stream.js"></script>
-  <script>if (localStorage.getItem("RedownloadFiles-Theme") === "a") document.body.setAttribute("data-bs-theme", "light")</script>
+  <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.6/StreamSaver.min.js"></script>
+  <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.6/examples/zip-stream.js"></script>
+  <script>
+    if (localStorage.getItem("RedownloadFiles-Theme") === "a") document.body.setAttribute("data-bs-theme", "light");
+  </script>
 </body>
 
 </html>
