--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 <body style="padding: 20px;" data-bs-theme="dark">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.6/StreamSaver.min.js"></script>
   <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/streamsaver@2.0.6/examples/zip-stream.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      let registration;
       const registerServiceWorker = async () => {
-        registration = await navigator.serviceWorker.register('./service-worker.js',);
+        window.sw = await navigator.serviceWorker.register('./service-worker.js',);
       };
       registerServiceWorker();
     } else console.error(":/")
