--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <script>
     if ('serviceWorker' in navigator) {
       const registerServiceWorker = async () => {
-        window.sw = await navigator.serviceWorker.register('./service-worker.js',);
+        window.sw = await navigator.serviceWorker.register('./service-worker.js', { scope: window.location.origin.indexOf("github") !== -1 ? `${window.location.origin}/redownload-files/` : `./` });
       };
       registerServiceWorker();
     } else console.error(":/")
     if (localStorage.getItem("RedownloadFiles-Theme") === "a") document.body.setAttribute("data-bs-theme", "light");
-    let appVersion = "1.0.0"
+    let appVersion = "1.0.1"
     fetch("./updatecode.txt", { cache: "no-store" }).then((res) => res.text().then((text) => { if (text.replace("\n", "") !== appVersion) if (confirm(`There's a new version of redownload-files. Do you want to update? [${appVersion} --> ${text.replace("\n", "")}]`)) { caches.delete("redownloadfiles-cache"); location.reload(true); } }).catch((e) => { console.error(e) })).catch((e) => console.error(e)); // Check if the application code is the same as the current application version and, if not, ask the user to update
   </script>
 </body>
