--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       const registerServiceWorker = async () => {
-        window.sw = await navigator.serviceWorker.register('./service-worker.js', { scope: window.location.origin.indexOf("github") !== -1 ? `${window.location.origin}/redownload-files/` : `./` });
+        window.sw = await navigator.serviceWorker.register('./service-worker.js');
       };
       registerServiceWorker();
     } else console.error(":/")
